# ai-sdk

./: CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: ai-sdk-python.mdc  mintlify.mdc
docs/: docs.json  index.mdx
docs/ai-sdk/: concepts.mdx  embeddings.mdx  introduction.mdx  object-generation.mdx  text-generation.mdx
docs/examples/: basic-text.mdx  embeddings-search.mdx  streaming.mdx  structured-output.mdx  tool-agent.mdx
docs/sdk/: concepts.mdx  embed_many.mdx  generate_object.mdx  generate_text.mdx  introduction.mdx  object-generation.mdx  providers.mdx  stream_object.mdx  stream_text.mdx  text-generation.mdx  tool-calling.mdx  tool.mdx  types.mdx
docs/sdk/providers/: anthropic.mdx  openai.mdx
src/ai_sdk/: __init__.py  embed.py  generate_object.py  generate_text.py  tool.py  types.py
src/ai_sdk/providers/: anthropic.py  embedding_model.py  language_model.py  openai.py
tests/: manual_test.py  test_ai_sdk.py  test_embed.py  test_tool_calling.py
